<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Title -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checklist_title"
            android:textStyle="bold"
            android:textSize="36sp" />

        <!-- Checklist -->
        <TextView
            android:id="@+id/admin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_inactive"
            android:textColor="@color/danger"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/watch_connected_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_watch_connected"
            android:textColor="@color/danger"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/watchlock_active_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchlock_inactive"
            android:textColor="@color/danger"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ping_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping_pending"
            android:textColor="@color/danger"
            android:visibility="gone"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_watchlock" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ping_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/warning"
                android:text="@string/ping" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>